# wiimms-iso-tools

./: .gitignore
project/: CMakeLists.txt  Makefile  setup_cmake.sh  system.c
project/dclib/: CMakeLists.txt
project/dclib/include/: CMakeLists.txt
project/dclib/include/dclib/: CMakeLists.txt  dclib-numeric.h
project/dclib/src/: CMakeLists.txt  dclib-basics.c  dclib-cli.c  dclib-color.c  dclib-debug.c  dclib-file.c  dclib-mysql.c  dclib-network-linux.c  dclib-network.c  dclib-numeric.c  dclib-option.c  dclib-parser.c  dclib-punycode.c  dclib-regex.c  dclib-shift-jis.c  dclib-tables.c  dclib-ui.c  dclib-utf8.c  dclib-vector.c  dclib-xdump.c  lib-bmg.c  lib-dol.c
project/setup/: version.h.in
project/src/: CMakeLists.txt  crypt.h  iso-interface.h  lib-bzip2.c  lib-ciso.c  lib-ciso.h  lib-sf.c  lib-sf.h  lib-std.c  lib-std.h  lib-wdf.c  lib-wia.h  logo.h  match-pattern.h  patch.c  patch.h  wdf.c  wit-mix.c  wit.c  wtest.c  wwt.c
project/src/libwbfs/: CMakeLists.txt
project/src/libwbfs/include/: CMakeLists.txt
project/src/libwbfs/include/wbfs/: CMakeLists.txt  cert.h  crypt.h  lib-error.h  libwbfs.h  libwbfs_os.h  rijndael.h  tools.h  wiidisc.h
project/src/libwbfs/src/: CMakeLists.txt  cert.c  file-formats.c  libwbfs.c  rijndael.c  tools.c  wiidisc.c
project/src/libwbfs/tests/: CMakeLists.txt
project/src/libwbfs/tests/src/: main.c
project/src/lzma/: CMakeLists.txt
project/src/ui/: gen-ui.c  ui-wdf.h  ui-wfuse.h  ui-wit.h  ui-wwt.h  ui.h
